# CPP-Things

./: README.md
C++_new_features/CodeDemo/: unique_ptr.cpp  weak_ptr.cpp
C++_new_features/alignof/: README.md
C++_new_features/cast/: README.md
C++_new_features/explicit/: README.md
C++_new_features/mutable/: README.md
C++_new_features/volatile/: README.md
Coding_style/: C++编程规范.docx
Coding_style/C++/: C++ 编程规范.md
Demo/TransferTest/myproject/: CMakeLists.txt
Demo/TransferTest/myproject/include/: Bar.hpp  Foo.hpp  Point3D.hpp  Serializable.hpp  SerializeFactory.hpp
Demo/TransferTest/myproject/serialization_demo/: CMakeLists.txt  main.cpp
Demo/TransferTest/myproject/src/: CMakeLists.txt  Foo.cpp  Point3D.cpp  SerializeFactory.cpp
Demo/TryTransfer/: README.md
Sort/: README.md
Thread/Async/: README.md
Thread/CondVar/: README.md
Thread/Demo/: 1.cpp
Thread/GrowingStack/: README.md
Thread/SimpleCondVar/: README.md
Thread/SimpleDataRace/: README.md
Thread/ThreadPool/: README.md
Thread/UniqueLock/: README.md
Thread/VectorAccessor/: README.md
Thread/multimutex/: README.md
codingstyle/: C++编程规范.docx  README.md
design_pattern_cpp/: README.md
design_pattern_cpp/Abstract Factory/: README.md
design_pattern_cpp/Adapter/: README.md
design_pattern_cpp/Bridge/: README.md
design_pattern_cpp/Builder/: README.md
design_pattern_cpp/Chain of Responsibility/: README.md
design_pattern_cpp/Command/: README.md
design_pattern_cpp/Composite/: README.md
design_pattern_cpp/Decorator/: README.md
design_pattern_cpp/Factory/: README.md
(+346 files in other folders)
